--- a/web/scripts/css/main.less
+++ b/web/scripts/css/main.less
@@ -2,6 +2,7 @@
 @rightGap: 10px;
 
 * { font-size: 10px; }
+body, html { position: relative; }
 
 h1, h2, h3 {
   position: relative;
@@ -15,16 +16,38 @@ h1, h2, h3 {
 h1 { font-size: 20px; }
 h2 { font-size: 16px; }
 h3 { font-size: 12px; }
-
+i { font-style: italic; }
 #container {
   margin: 5px;
 }
+.border() {
+  border: solid 1px #0f0;
+}
 
-#titlebar { 
+#titlebar {
+  position: absolute;
   padding: 20px @leftGap 20px @rightGap;
   background: #ddd;
-  
-  h1 { span { color: #00f; } }
+  left: 5px;
+  right: 5px;
+  height: 50px;
+
+  #title {
+    position: absolute;
+    left: 0px;
+    width: 90px;
+    span { color: #00f; }
+    .border;
+  }
+
+  #toolbar {
+    position: absolute;
+    left: 100px;
+    right: 5px;
+    width: auto;
+    height: 30px;
+    .border;
+  }
 }
 
 #myCanvas {
